<resources>
    <string name="app_name">AppGrupo5</string>


    <string name="p4_titulo">Alquiler de Canchas Sintéticas</string>
    <string name="p4_hint_minutos">Ingrese minutos adicionales</string>
    <string name="p4_btn_calcular">Calcular Tarifa</string>
    <string name="titutloActivity3">PREGUNTA 3</string>
    <string name="subtituloActivity3">DESPERDICIO DE COMIDA EN RESTAURANTE</string>
    <string name="inputActivity3">Ingrese el valor en gramos</string>
    <string name="titulo_ejercicio_1">PREGUNTA 1</string>
    <string name="text_horas_adicionales">Ingrese las horas adicionales (h)</string>
    <string name="text_calcular" >CALCULAR</string>
    <string name="txtbtn_Pregunta1">PREGUNTA 1</string>
    <string name="txtbtn_regresar1">REGRESAR</string>

    <!--textos -->
    <string name="titulo_pregunta5">-Control de Consumo de Energía-</string>
    <string name="I_potencia">-Ingrese potencia en watts (W)-</string>
    <string name="btn_calcular">-Calcular Recargo-</string>
    <string name="resultado_inicial">Resultados:</string>
    <string name="error_vacio">-Por favor ingrese un valor en watts.-</string>
    <string name="consumo_normal">-Consumo eléctrico dentro de la capacidad asignada.-</string>
</resources>